--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Healthtest</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Healthtest</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://assets.website-files.com/5fef5619b640934b33c2385e/css/portfolio-webflow-html-website-template.webflow.fb0c99d79.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://assets.website-files.com/5fef5619b640934b33c2385e/6078acfd46b89d8f2ccece66_Group%2073.png"
+      rel="apple-touch-icon"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+
+    <!-- ========== Desplazar las cards encima del blog========== -->
+    <script
+      src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5fef5619b640934b33c2385e"
+      type="text/javascript"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://assets.website-files.com/5fef5619b640934b33c2385e/js/webflow.c636f99f2.js"
+      type="text/javascript"
+    ></script>
+  </body>
 </html>
