--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Healthtest</title>
+    <title>HealthTest</title>
     <base href="/" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <!-- ========== Icono de la aplicacion========== -->
+    <link rel="icon" type="image/x-icon" href="assets/img/logpestañapryect.png" />
     <!-- ========== botom arriba links ========== -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'></link>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-
 
     <!-- ========== descarga ek css de una pagina web de los card que desplazan y el blog ========== -->
     <link
