--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
     <!-- ========== botom arriba links ========== -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'></link>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <!-- ========== WebFont ========== -->
+    <script src="https://kit.fontawesome.com/18096001b9.js" crossorigin="anonymous"></script>
 
-    <!-- ========== descarga ek css de una pagina web de los card que desplazan y el blog ========== -->
+    <!-- ========== descarga el css de una pagina web de los card que desplazan y el blog ========== -->
     <link
       href="https://assets.website-files.com/5fef5619b640934b33c2385e/css/portfolio-webflow-html-website-template.webflow.fb0c99d79.css"
       rel="stylesheet"
