--- a/src/index.html
+++ b/src/index.html
@@ -1,71 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>HealthTest</title>
-    <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- ========== Icono de la aplicacion========== -->
-    <link rel="icon" type="image/x-icon" href="assets/img/logpestañapryect.png" />
-    <!-- ========== botom arriba links ========== -->
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'></link>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <!-- ========== WebFont ========== -->
-    <script src="https://kit.fontawesome.com/18096001b9.js" crossorigin="anonymous"></script>
+<head>
+  <meta charset="utf-8" />
+  <title>HealthTest</title>
+  <base href="/" />
 
-    <!-- ========== descarga el css de una pagina web de los card que desplazan y el blog ========== -->
-    <link
-      href="https://assets.website-files.com/5fef5619b640934b33c2385e/css/portfolio-webflow-html-website-template.webflow.fb0c99d79.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-  </head>
-  <body>
-    <app-root></app-root>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- ========== Icono de la aplicacion========== -->
+  <link rel="icon" type="image/x-icon" href="assets/img/logpestañapryect.png" />
 
-    <!-- ========== Desplazar las cards encima del blog========== -->
-    <script
-      src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5fef5619b640934b33c2385e"
-      type="text/javascript"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://assets.website-files.com/5fef5619b640934b33c2385e/js/webflow.c636f99f2.js"
-      type="text/javascript"
-    ></script>
+  <!-- ========== botom arriba links ========== -->
+  <link rel="stylesheet" href="assets/CSS/stylepagprincipal.css" />
 
 
-    <!-- ========== java botom arriba========== -->
-    <script>
-      $(document).ready(function () {
-        /*aqui planteamos que el boton tenga una animación al momento de desaparecer*/
-        $(".arriba").click(function () {
-          $("body,html").animate(
-            {
-              scrollTop: "0px",
-            },
-            300
-          );
-        });
-        $(window).scroll(function () {
-          /*aqui le indicamos que al momento  que se esta deslizando
-           * hacia arriba gracias a la función "function" esta llamando a la animación*/
-          if ($(this).scrollTop() > 0) {
-            $(".arriba").slideDown(300);
-          } else {
-            /*En este caso el boton esta a la vista del usuario*/
-            $(".arriba").slideUp(300);
-          }
-        });
+  <!-- ========== botom arriba links ========== -->
+  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+  </link>
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <!-- ========== WebFont ========== -->
+  <script src="https://kit.fontawesome.com/18096001b9.js" crossorigin="anonymous"></script>
+  <!-- ========== descarga el css de una pagina web de los card que desplazan y el blog ========== -->
+  <link
+    href="https://assets.website-files.com/5fef5619b640934b33c2385e/css/portfolio-webflow-html-website-template.webflow.fb0c99d79.css"
+    rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <app-root></app-root>
+
+  <!-- booking section starts   -->
+
+<section class="book" id="book">
+  <h1 class="heading"><span>Contacta Con</span> Nosotros</h1>
+
+  <div class="row">
+    <div class="image">
+      <img src="../assets/img/contactus.png" alt="" />
+    </div>
+
+    <form id="form">
+      <h3>Nos Encantan Las Conversaciones, Hablemos.</h3>
+      <input
+        type="text"
+        name="from_name"
+        id="from_name"
+        placeholder="Nombre Completo"
+        class="box"
+        required
+      />
+      <input
+        type="number"
+        name="phone"
+        id="phone"
+        placeholder="Numero de Telefono"
+        class="box"
+        required
+      />
+      <input
+        type="email"
+        name="email_id"
+        id="email_id"
+        placeholder="Email"
+        class="box"
+        required
+      />
+      <textarea
+        class="box"
+        name="message"
+        name="message"
+        id="message"
+        cols="30"
+        rows="5"
+        placeholder="Ingresa Tu Mensaje"
+      ></textarea>
+      <button>
+        <span class="shadow"></span>
+        <span class="edge"></span>
+        <span class="front text">
+          <input  type="submit" class="front" id="button" value="Enviar" >
+          <i class="fa-solid fa-message"></i
+            ></span>
+      </button>     
+    </form>
+  </div>
+</section>
+
+<!-- booking section ends -->
+
+<!-- footer section starts  -->
+
+<section class="footer">
+  <div class="credit">
+    Creado por
+    <span>Silva Donald y Gonzales Elvis</span> | Reservados todos los derechos..
+  </div>
+</section>
+
+<!-- footer section ends -->
+
+
+
+
+  <!-- ========== Desplazar las cards encima del blog========== -->
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5fef5619b640934b33c2385e"
+    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
+  <script src="https://assets.website-files.com/5fef5619b640934b33c2385e/js/webflow.c636f99f2.js"
+    type="text/javascript"></script>
+
+  <!-- ========== java botom arriba========== -->
+  <script>
+    $(document).ready(function () {
+      /*aqui planteamos que el boton tenga una animación al momento de desaparecer*/
+      $(".arriba").click(function () {
+        $("body,html").animate(
+          {
+            scrollTop: "0px",
+          },
+          300
+        );
       });
-    </script>
+      $(window).scroll(function () {
+        /*aqui le indicamos que al momento  que se esta deslizando
+         * hacia arriba gracias a la función "function" esta llamando a la animación*/
+        if ($(this).scrollTop() > 0) {
+          $(".arriba").slideDown(300);
+        } else {
+          /*En este caso el boton esta a la vista del usuario*/
+          $(".arriba").slideUp(300);
+        }
+      });
+    });
+  </script>
 
 
-     <!-- ========== Accessibilidad========== -->
-    
-    <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "OGRNOa8KSi");s.setAttribute("src", "https://cdn.userway.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website accessibility</a></noscript>
+  <!-- ========== Accessibilidad========== -->
 
-  </body>
+  <script>(function (d) { var s = d.createElement("script"); s.setAttribute("data-account", "OGRNOa8KSi"); s.setAttribute("src", "https://cdn.userway.org/widget.js"); (d.body || d.head).appendChild(s); })(document)</script>
+  <noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website
+      accessibility</a></noscript>
+
+  <script src="assets/Js/scriptpagprincipal.js"></script>
+  <!--Contactanos Email-->
+  <!-- email -->
+
+  
+  <script type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+  <script type="text/javascript">
+      emailjs.init('q3M13USp5tT7ZFbg_')
+  </script>
+<script>
+  const btn = document.getElementById('button');
+
+  document.getElementById('form')
+          .addEventListener('submit', function (event) {
+              event.preventDefault();
+
+              btn.value = 'Enviando...';
+
+              const serviceID = 'default_service';
+              const templateID = 'template_eax67ds';
+
+              emailjs.sendForm(serviceID, templateID, this)
+                      .then(() => {
+                          btn.value = 'Enviar';
+                          alert('Mensaje enviado correctamente!');
+                      }, (err) => {
+                          btn.value = 'Enviar';
+                          alert(JSON.stringify(err));
+                      });
+          });
+</script>
+</body>
+
 </html>
