--- a/src/index.html
+++ b/src/index.html
@@ -137,9 +137,7 @@
 
   <!-- ========== Accessibilidad========== -->
 
-  <script>(function (d) { var s = d.createElement("script"); s.setAttribute("data-account", "OGRNOa8KSi"); s.setAttribute("src", "https://cdn.userway.org/widget.js"); (d.body || d.head).appendChild(s); })(document)</script>
-  <noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website
-      accessibility</a></noscript>
+  <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "OGRNOa8KSi");s.setAttribute("src", "https://cdn.userway.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website accessibility</a></noscript>
 
   <script src="assets/Js/scriptpagprincipal.js"></script>
   <!--Contactanos Email-->
