--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <!-- ========== botom arriba links ========== -->
   <link rel="stylesheet" href="assets/CSS/stylepagprincipal.css" />
 
-
+  <link rel="stylesheet" href="assets/CSS/menuitems.css" />
   <!-- ========== botom arriba links ========== -->
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   </link>
@@ -29,28 +29,43 @@
 <body>
   <header class="header">
     <a href="#" class="logo"> HealthTest. </a>
-    <nav class="navbar" style="right: -18em; position: relative">
-      <a href="#home">home</a>
-      <a href="#services">Nuestros Servicios</a>
-      <a href="#about">Sobre Nosotros</a>
-      <a href="#doctors">Creadores</a>
-      <a href="#book">Contactos</a>
-      <a href="#review">review</a>
-      <a href="#blogs">Blogs</a>
+    <nav class="navbar" style="right: -2em; position: relative">
+      <ul>
+        <li><a href="#home">home</a></li>
+        <li><a href="#services">Nuestros Servicios</a></li>
+        <li><a href="#about">Sobre Nosotros</a></li>
+        <li><a href="#">Test</a>
+          <ul>
+            <li><a href="#">Test de Estres</a>
+            <li><a href="#">Test de Ansiedad</a>
+            <li><a href="#">Test de Depresión</a>
+          </ul>
+        </li>
+        <li> <a href="#doctors">Creadores</a></li>
+        <li> <a href="#book">Contactos</a></li>
+        <li> <a href="#review">DATOS CURIOSOS</a>
+        </li>
+        <li> <a href="#blogs">Blogs</a></li>
+        <li><a href="#">Iniciar Sesión</a>
+          <ul>
+            <li><a href="#">¿Deseas acceder?</a>
+          </ul>
+        </li>
+      </ul>
     </nav>
-  
+
     <div id="menu-btn" class="fas fa-bars"></div>
   </header>
-  
+
   <!-- header section ends -->
-  
+
   <!-- home section starts  -->
-  
+
   <section class="home" id="home">
     <div class="image">
       <img src="../assets/img/Logo3PrName.png" alt="" />
     </div>
-  
+
     <div class="content">
       <h3>bienvenido a HealthTest</h3>
       <p>
@@ -61,15 +76,15 @@
         una terapia individual en un ambiente tranquilo, seguro y confortable.
       </p>
       <a href="#" class="btn">
-        contact us <span class="fas fa-chevron-right"></span>
+        Iniciar Sesión <span class="fas fa-chevron-right"></span>
       </a>
     </div>
   </section>
-  
+
   <!-- home section ends -->
-  
+
   <!-- icons section starts  -->
-  
+
   <section class="icons-container">
     <div class="icons">
       <img style="width: 5em" src="../assets/img/thinkfrase.png" />
@@ -78,7 +93,7 @@
       </h4>
       <p>Dalai Lama</p>
     </div>
-  
+
     <div class="icons">
       <img style="width: 5em" src="../assets/img/thinkfrase.png" />
       <h4 style="font-size: 1.5rem">
@@ -86,7 +101,7 @@
       </h4>
       <p>Hans Selye</p>
     </div>
-  
+
     <div class="icons">
       <img style="width: 5em" src="../assets/img/thinkfrase.png" />
       <h4 style="font-size: 1.5rem">
@@ -94,7 +109,7 @@
       </h4>
       <p>Isidre Esteve</p>
     </div>
-  
+
     <div class="icons">
       <img style="width: 5em" src="../assets/img/thinkfrase.png" />
       <h4 style="font-size: 1.5rem">
@@ -103,19 +118,19 @@
       <p>Robert Collier</p>
     </div>
   </section>
-  
+
   <!-- icons section ends -->
-  
+
   <!-- about section starts  -->
-  
+
   <section class="about" id="about">
     <h1 class="heading"><span>Sobre</span> Nosotros</h1>
-  
+
     <div class="row">
       <div class="image">
         <img src="../assets/img/brainemotional.png" alt="" />
       </div>
-  
+
       <div class="content">
         <h3>La base para la felicidad es la salud</h3>
         <p>
@@ -130,20 +145,17 @@
           test de estrés para determinar cuál es el tratamiento que mejor funciona
           y te aporta estabilidad mental.
         </p>
-        <a href="#" class="btn">
-          Realizar Test de estres <span class="fas fa-chevron-right"></span>
-        </a>
       </div>
     </div>
   </section>
-  
+
   <!-- about section ends -->
-  
+
   <!-- services section starts  -->
-  
+
   <section class="services" id="services">
     <h1 class="heading">Nuestros <span>Servicios</span></h1>
-  
+
     <div class="box-container">
       <div class="box">
         <img style="width: 5em" src="../assets/img/list.png" />
@@ -156,7 +168,31 @@
           Realizar Test de Estrés <span class="fas fa-chevron-right"></span>
         </a>
       </div>
-  
+
+      <div class="box">
+        <img style="width: 5em" src="https://cdn-icons-png.flaticon.com/512/1739/1739547.png" />
+        <h3>Test de Ansiedad</h3>
+        <p>
+          Está conformada entre 12 a 15 preguntas diferentes esto permitirá
+          identificar algunos de los síntomas más comunes del estrés.
+        </p>
+        <a href="#" class="btn">
+          Realizar Test de Ansiedad <span class="fas fa-chevron-right"></span>
+        </a>
+      </div>
+
+      <div class="box">
+        <img style="width: 5em" src="https://cdn-icons-png.flaticon.com/512/9304/9304651.png" />
+        <h3>Test de Depresión</h3>
+        <p>
+          Está conformada entre 12 a 15 preguntas diferentes esto permitirá
+          identificar algunos de los síntomas más comunes del estrés.
+        </p>
+        <a href="#" class="btn">
+          Realizar Test de Depresión <span class="fas fa-chevron-right"></span>
+        </a>
+      </div>
+
       <div class="box">
         <img style="width: 5em" src="../assets/img/mail.png" />
         <h3>Contactos</h3>
@@ -168,7 +204,7 @@
           Contactar <span class="fas fa-chevron-right"></span>
         </a>
       </div>
-  
+
       <div class="box">
         <i class="fas fa-user-md"></i>
         <h3>Servicios al Cliente</h3>
@@ -178,15 +214,12 @@
           en mejorar su desarrollo personal, o necesiten apoyo en recuperar su
           estado de salud.
         </p>
-        <a
-          href="https://api.whatsapp.com/send/?phone=593984772266&text=Hola%2C+%C2%BFc%C3%B3mo+podemos+ayudarte%3F+Env%C3%ADanos+un+mensaje+&type=phone_number&app_absent=0"
-          class="btn"
-          target="_blank"
-        >
+        <a href="https://api.whatsapp.com/send/?phone=593984772266&text=Hola%2C+%C2%BFc%C3%B3mo+podemos+ayudarte%3F+Env%C3%ADanos+un+mensaje+&type=phone_number&app_absent=0"
+          class="btn" target="_blank">
           Haz tu cita <span class="fas fa-chevron-right"></span>
         </a>
       </div>
-  
+
       <div class="box">
         <i class="fa-solid fa-file-circle-plus"></i>
         <h3>Documentos Adjuntados</h3>
@@ -198,7 +231,7 @@
           Visualizar <span class="fas fa-chevron-right"></span>
         </a>
       </div>
-  
+
       <div class="box">
         <img style="width: 5em" src="../assets/img/clipboard.png" />
         <h3>Reportes Test de Estrés</h3>
@@ -207,7 +240,7 @@
           podrá visualizar informes de pruebas anteriores.
         </p>
       </div>
-  
+
       <div class="box">
         <i class="fa-solid fa-universal-access"></i>
         <h3>Accessibility Menu (CTRL+U)</h3>
@@ -218,50 +251,40 @@
       </div>
     </div>
   </section>
-  
+
   <!-- services section ends -->
-  
+
   <!-- icons section starts  -->
-  
+
   <!-- review section starts  -->
-  
+
   <!-- about section starts  -->
-  
+
   <section class="about" id="about">
     <h1 class="heading"><span>Reserva</span> Tu cita</h1>
-  
+
     <div class="row">
       <div class="content">
         <h5>Inicia tu terapia psicológica en 3 sencillos pasos</h5>
         <br />
-        <img
-          style="width: 5em"
-          src="https://cdn-icons-png.flaticon.com/512/599/599613.png?w=740&t=st=1673723472~exp=1673724072~hmac=3e166fabd8df80b1575a18adabafe95a6568211980f93113540a9d6b5b422647"
-        />
+        <img style="width: 5em"
+          src="https://cdn-icons-png.flaticon.com/512/599/599613.png?w=740&t=st=1673723472~exp=1673724072~hmac=3e166fabd8df80b1575a18adabafe95a6568211980f93113540a9d6b5b422647" />
         <h6 style="position: relative; right: -1em">Paso 1. Envía un mensaje</h6>
         <p>Contáctanos y cuéntanos tus desafíos.</p>
         <br />
-        <img
-          style="width: 5em"
-          src="https://cdn-icons-png.flaticon.com/512/1253/1253821.png?w=740&t=st=1673643420~exp=1673644020~hmac=e97aa5c362ea35fb849a6e41516d7c02ecad983bd384bf6551496a829dcc72bb"
-        />
+        <img style="width: 5em"
+          src="https://cdn-icons-png.flaticon.com/512/1253/1253821.png?w=740&t=st=1673643420~exp=1673644020~hmac=e97aa5c362ea35fb849a6e41516d7c02ecad983bd384bf6551496a829dcc72bb" />
         <h6 style="position: relative; right: -1em">Paso 2. Selecciona el Día</h6>
         <p>Elige la fecha y hora de tratamiento que más te convenga.</p>
         <br />
-        <img
-          style="width: 5em"
-          src="https://cdn-icons-png.flaticon.com/512/1211/1211794.png"
-        />
+        <img style="width: 5em" src="https://cdn-icons-png.flaticon.com/512/1211/1211794.png" />
         <h6 style="position: relative; right: -1em">Paso 3. Alcanza la Cima</h6>
         <p>
           Seleccionaremos al terapeuta perfecto para guiarte y esperarte en tu
           primera cita.
         </p>
-        <a
-          href="https://api.whatsapp.com/send/?phone=593984772266&text=Hola%2C+%C2%BFc%C3%B3mo+podemos+ayudarte%3F+Env%C3%ADanos+un+mensaje+&type=phone_number&app_absent=0"
-          class="btn"
-          target="_blank"
-        >
+        <a href="https://api.whatsapp.com/send/?phone=593984772266&text=Hola%2C+%C2%BFc%C3%B3mo+podemos+ayudarte%3F+Env%C3%ADanos+un+mensaje+&type=phone_number&app_absent=0"
+          class="btn" target="_blank">
           Haz tu cita <span class="fas fa-chevron-right"></span>
         </a>
       </div>
@@ -271,7 +294,7 @@
     </div>
   </section>
 
-  
+
   <section class="review" id="review">
     <h1 class="heading">Datos <span>Curiosos</span></h1>
 
@@ -361,7 +384,7 @@
 
           <div class="popup-video3">
             <span class="close">&times;</span>
-            <video  src="assets/video/adicconcelular.mp4" muted autoplay controls></video>
+            <video src="assets/video/adicconcelular.mp4" muted autoplay controls></video>
           </div>
         </div>
       </div>
@@ -370,10 +393,10 @@
 
 
 
-<!-- blogs section starts   -->
+  <!-- blogs section starts   -->
   <app-root></app-root>
   <!-- booking section starts   -->
-  
+
   <section class="book" id="book">
     <h1 class="heading"><span>Contacta Con</span> Nosotros</h1>
 
@@ -406,7 +429,7 @@
       Creado por
       <span>Silva Donald y Gonzales Elvis</span> | Reservados todos los derechos..
     </div>
-   
+
   </section>
 
 
@@ -515,7 +538,7 @@
   </script>
 
   <script>
-     document.querySelectorAll(".btn3").forEach((vid) => {
+    document.querySelectorAll(".btn3").forEach((vid) => {
       vid.onclick = () => {
         document.querySelector(".popup-video2").style.display = "block";
         document.querySelector(".popup-video2 video") = vid.getAttribute("src");
@@ -526,17 +549,17 @@
     };
   </script>
 
-<script>
-  document.querySelectorAll(".btn4").forEach((vid) => {
-   vid.onclick = () => {
-     document.querySelector(".popup-video3").style.display = "block";
-     document.querySelector(".popup-video3 video") = vid.getAttribute("src");
-   };
- });
- document.querySelector(".popup-video3 .close").onclick = () => {
-   document.querySelector(".popup-video3").style.display = "none";
- };
-</script>
+  <script>
+    document.querySelectorAll(".btn4").forEach((vid) => {
+      vid.onclick = () => {
+        document.querySelector(".popup-video3").style.display = "block";
+        document.querySelector(".popup-video3 video") = vid.getAttribute("src");
+      };
+    });
+    document.querySelector(".popup-video3 .close").onclick = () => {
+      document.querySelector(".popup-video3").style.display = "none";
+    };
+  </script>
 </body>
 
 </html>
