--- a/src/assets/CSS/prueba.html
+++ b/src/assets/CSS/prueba.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
@@ -21,6 +22,7 @@
   </head>
 
   <body>
+    <app-root></app-root>
     <div class="container">
       <div class="signin-signup">
         <form action="" class="sign-in-form">
