--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- ========== Icono de la aplicacion========== -->
   <link rel="icon" type="image/x-icon" href="assets/img/logpestañapryect.png" />
+  <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+
 
   <!-- ========== botom arriba links ========== -->
   <link rel="stylesheet" href="assets/CSS/stylepagprincipal.css" />
@@ -110,6 +112,7 @@ src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script
 </script>-->
 <!-- /GetButton.io widget -->
 
+<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
 </body>
 </html>
